# SELFRec

./: .gitignore  README.md  SELFRec.py  main.py  pyproject.toml  requirements.txt
base/: graph_recommender.py  recommender.py  seq_recommender.py  tf_interface.py  torch_interface.py
conf/: BERT4Rec.conf  BERT4Rec.yaml  BUIR.conf  BUIR.yaml  CL4SRec.conf  CL4SRec.yaml  DirectAU.conf  DirectAU.yaml  DuoRec.conf  DuoRec.yaml  ItemKNN.yaml  LightGCN.conf  LightGCN.yaml  MF.conf  MF.yaml  MHCN.conf  MHCN.yaml  MixGCF.conf  MixGCF.yaml  NCL.conf  NCL.yaml  SASRec.conf  SASRec.yaml  SEPT.conf  SEPT.yaml  SGL.conf  SGL.yaml  SSL4Rec.conf  SSL4Rec.yaml  SelfCF.conf  SelfCF.yaml  SimGCL.conf  SimGCL.yaml  UserKNN.yaml  XSimGCL.conf  XSimGCL.yaml
data/: augmentor.py  data.py  graph.py  loader.py  sequence.py  social.py  ui_graph.py
dataset/amazon-beauty/: test.txt  train.txt
dataset/douban-book/: split.py  test.txt  trust.txt
dataset/ml-1M/: split.py  test.txt
dataset/yelp2018/: process.py
model/graph/: BUIR.py  DirectAU.py  ItemKNN.py  LightGCN.py  MF.py  MHCN.py  MixGCF.py  NCL.py  SEPT.py  SGL.py  SSL4Rec.py  SelfCF.py  SimGCL.py  UserKNN.py  XSimGCL.py
model/sequential/: BERT4Rec.py  CL4SRec.py  SASRec.py
tests/: conftest.py  test_setup_validation.py
util/: algorithm.py  conf.py  evaluation.py  logger.py  loss.py  loss_tf.py  loss_torch.py  sampler.py  structure.py
